syntax = "proto3";

message UserRequest {
    int32 id = 1;
    string username = 2;
    string password = 3;
}

message UserResponse {
    int32 id = 1;
    string username = 2;
    string password = 3;
}


service UserAcesss {
    rpc UserAcesssService(UserRequest) returns (UserResponse) {}
}